--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@next/third-parties": "^15.1.4",
         "@react-aria/visually-hidden": "^3.8.17",
         "@tabler/icons-react": "^3.21.0",
+        "@uidotdev/usehooks": "^2.4.1",
         "clsx": "^2.1.1",
         "framer-motion": "^11.11.11",
         "humps": "^2.0.1",
