--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@tabler/icons-react": "^3.21.0",
         "@uidotdev/usehooks": "^2.4.1",
         "clsx": "^2.1.1",
+        "detect-it": "^4.0.1",
         "framer-motion": "^11.11.11",
         "humps": "^2.0.1",
         "immer": "^10.1.1",
