--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@next/third-parties": "^15.1.4",
         "@react-aria/visually-hidden": "^3.8.17",
         "@tabler/icons-react": "^3.21.0",
+        "@tsparticles/react": "^3.0.0",
+        "@tsparticles/slim": "^3.8.0",
         "@uidotdev/usehooks": "^2.4.1",
         "clsx": "^2.1.1",
         "detect-it": "^4.0.1",
