--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "scripts": {
         "dev": "yarn lint && NODE_OPTIONS='--inspect' next dev --turbopack",
-        "build": "next build",
+        "build": "next build && next-sitemap",
         "start": "next start",
         "lint": "eslint . --ext .ts,.tsx,.js,.jsx -c .eslintrc.json --fix --ignore-pattern 'out/'"
     },
@@ -28,6 +28,7 @@
         "lodash.kebabcase": "^4.1.1",
         "lodash.merge": "^4.6.2",
         "next": "15.1.3",
+        "next-sitemap": "^4.2.3",
         "next-themes": "^0.4.4",
         "react": "^18.3.1",
         "react-custom-events": "^1.1.1",
