--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@heroui/react": "^2.8.3",
+        "@next/bundle-analyzer": "^16.0.4",
         "@next/third-parties": "^15.5.2",
         "@react-aria/visually-hidden": "^3.8.27",
         "@tabler/icons-react": "^3.34.1",
@@ -72,7 +73,7 @@
         "tailwindcss": "^3.4.17",
         "typescript": "^5.9.2"
     },
-    "packageManager": "yarn@4.11.0",
+    "packageManager": "yarn@4.12.0",
     "engines": {
         "node": ">=16.9.0"
     }
