--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
     "license": "MIT",
     "private": true,
     "scripts": {
-        "dev": "yarn lint && NODE_OPTIONS='--inspect' next dev --turbopack",
+        "dev": "yarn lint && NODE_OPTIONS='--inspect' next dev",
         "build": "next build && next-sitemap",
         "start": "next start",
         "lint": "eslint . --ext .ts,.tsx,.js,.jsx -c .eslintrc.json --fix --ignore-pattern 'out/'"
     },
     "dependencies": {
-        "@heroui/react": "^2.8.3",
-        "@next/bundle-analyzer": "^16.0.4",
-        "@next/third-parties": "^15.5.2",
-        "@react-aria/visually-hidden": "^3.8.27",
-        "@tabler/icons-react": "^3.34.1",
+        "@heroui/react": "^2.8.8",
+        "@next/bundle-analyzer": "16.1.6",
+        "@next/third-parties": "16.1.6",
+        "@react-aria/visually-hidden": "^3.8.30",
+        "@tabler/icons-react": "^3.36.1",
         "@tsparticles/react": "^3.0.0",
         "@tsparticles/slim": "^3.9.1",
         "@uidotdev/usehooks": "^2.4.1",
@@ -22,24 +22,24 @@
         "detect-it": "^4.0.1",
         "framer-motion": "^11.18.2",
         "humps": "^2.0.1",
-        "immer": "^10.1.3",
-        "intl-messageformat": "^10.7.16",
+        "immer": "^10.2.0",
+        "intl-messageformat": "^10.7.18",
         "javascript-color-gradient": "^2.5.0",
         "js-base64": "^3.7.8",
         "lodash.kebabcase": "^4.1.1",
         "lodash.merge": "^4.6.2",
-        "next": "15.4.10",
+        "next": "16.1.6",
         "next-sitemap": "^4.2.3",
         "next-themes": "^0.4.6",
-        "react": "^18.3.1",
+        "react": "^19.2.4",
         "react-custom-events": "^1.1.1",
-        "react-dom": "^18.3.1",
+        "react-dom": "^19.2.4",
         "react-use-websocket": "^4.13.0",
-        "styled-components": "^6.1.19",
+        "styled-components": "^6.3.8",
         "type-fest": "^4.41.0",
         "use-immer": "^0.10.0",
         "uuid": "^11.1.0",
-        "zustand": "^5.0.8"
+        "zustand": "^5.0.11"
     },
     "devDependencies": {
         "@next/eslint-plugin-next": "15.1.3",
@@ -47,12 +47,12 @@
         "@types/javascript-color-gradient": "^2",
         "@types/lodash.kebabcase": "^4",
         "@types/lodash.merge": "^4",
-        "@types/node": "^20.19.13",
-        "@types/react": "^18.3.24",
-        "@types/react-dom": "^18.3.7",
-        "@typescript-eslint/eslint-plugin": "^8.42.0",
-        "@typescript-eslint/parser": "^8.42.0",
-        "autoprefixer": "^10.4.21",
+        "@types/node": "^20.19.31",
+        "@types/react": "^19.2.13",
+        "@types/react-dom": "^19.2.3",
+        "@typescript-eslint/eslint-plugin": "^8.54.0",
+        "@typescript-eslint/parser": "^8.54.0",
+        "autoprefixer": "^10.4.24",
         "eslint": "^8.57.1",
         "eslint-config-prettier": "^9.1.2",
         "eslint-config-semistandard": "^17.0.0",
@@ -61,17 +61,17 @@
         "eslint-plugin-jsx-a11y": "^6.10.2",
         "eslint-plugin-n": "^15.7.0",
         "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-prettier": "^5.5.4",
+        "eslint-plugin-prettier": "^5.5.5",
         "eslint-plugin-promise": "^6.6.0",
         "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^4.6.2",
-        "eslint-plugin-unused-imports": "^4.2.0",
+        "eslint-plugin-unused-imports": "^4.3.0",
         "postcss": "^8.5.6",
-        "prettier": "^3.6.2",
-        "sass": "^1.92.1",
+        "prettier": "^3.8.1",
+        "sass": "^1.97.3",
         "tailwind-variants": "^0.2.1",
-        "tailwindcss": "^3.4.17",
-        "typescript": "^5.9.2"
+        "tailwindcss": "^3.4.19",
+        "typescript": "^5.9.3"
     },
     "packageManager": "yarn@4.12.0",
     "engines": {
